--- a/Live News/Base.lproj/LaunchScreen.storyboard
+++ b/Live News/Base.lproj/LaunchScreen.storyboard
@@ -1,7 +1,8 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15510"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -9,17 +10,87 @@
         <!--View Controller-->
         <scene sceneID="EHf-IW-A2E">
             <objects>
-                <viewController id="01J-lp-oVM" sceneMemberID="viewController">
+                <viewController wantsFullScreenLayout="YES" id="01J-lp-oVM" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Cyphers LogoBLUE copy" translatesAutoresizingMaskIntoConstraints="NO" id="dCT-u8-TBy">
+                                <rect key="frame" x="20" y="655" width="374" height="207"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="207" id="BzQ-B3-8bA"/>
+                                    <constraint firstAttribute="width" constant="374" id="I7q-TO-l4S"/>
+                                </constraints>
+                                <variation key="default">
+                                    <mask key="constraints">
+                                        <exclude reference="BzQ-B3-8bA"/>
+                                        <exclude reference="I7q-TO-l4S"/>
+                                    </mask>
+                                </variation>
+                                <variation key="heightClass=regular-widthClass=compact">
+                                    <mask key="constraints">
+                                        <include reference="BzQ-B3-8bA"/>
+                                        <include reference="I7q-TO-l4S"/>
+                                    </mask>
+                                </variation>
+                            </imageView>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="Screenshot 2019-11-27 at 10.18.50 PM" highlighted="YES" adjustsImageSizeForAccessibilityContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="ALp-vi-USG">
+                                <rect key="frame" x="88" y="353" width="239" height="190"/>
+                            </imageView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="ALp-vi-USG" firstAttribute="centerX" secondItem="dCT-u8-TBy" secondAttribute="centerX" id="19X-ta-rmh"/>
+                            <constraint firstItem="dCT-u8-TBy" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="611" id="2VO-Dp-pMl"/>
+                            <constraint firstItem="dCT-u8-TBy" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="4vT-SJ-Xqo"/>
+                            <constraint firstItem="dCT-u8-TBy" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="K58-Rw-EHm"/>
+                            <constraint firstItem="ALp-vi-USG" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="88" id="Mu2-FT-mgH"/>
+                            <constraint firstItem="dCT-u8-TBy" firstAttribute="trailing" secondItem="Ze5-6b-2t3" secondAttribute="trailingMargin" id="Mvb-4Z-TXC"/>
+                            <constraint firstItem="dCT-u8-TBy" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="611" id="Mxc-TC-AvO"/>
+                            <constraint firstItem="ALp-vi-USG" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="SXt-Ra-02V"/>
+                            <constraint firstItem="dCT-u8-TBy" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leadingMargin" id="dGx-lT-bQ0"/>
+                            <constraint firstItem="dCT-u8-TBy" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leadingMargin" id="eYt-bB-bJ5"/>
+                            <constraint firstItem="ALp-vi-USG" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="309" id="gId-5U-eLN"/>
+                            <constraint firstItem="dCT-u8-TBy" firstAttribute="trailing" secondItem="Ze5-6b-2t3" secondAttribute="trailingMargin" id="mrb-l0-2N6"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <variation key="default">
+                            <mask key="constraints">
+                                <exclude reference="19X-ta-rmh"/>
+                                <exclude reference="Mu2-FT-mgH"/>
+                                <exclude reference="SXt-Ra-02V"/>
+                                <exclude reference="gId-5U-eLN"/>
+                                <exclude reference="K58-Rw-EHm"/>
+                                <exclude reference="Mxc-TC-AvO"/>
+                                <exclude reference="eYt-bB-bJ5"/>
+                                <exclude reference="mrb-l0-2N6"/>
+                            </mask>
+                        </variation>
+                        <variation key="heightClass=regular-widthClass=compact">
+                            <mask key="constraints">
+                                <include reference="19X-ta-rmh"/>
+                                <include reference="Mu2-FT-mgH"/>
+                                <include reference="SXt-Ra-02V"/>
+                                <include reference="gId-5U-eLN"/>
+                                <exclude reference="2VO-Dp-pMl"/>
+                                <exclude reference="4vT-SJ-Xqo"/>
+                                <include reference="K58-Rw-EHm"/>
+                                <exclude reference="Mvb-4Z-TXC"/>
+                                <include reference="Mxc-TC-AvO"/>
+                                <exclude reference="dGx-lT-bQ0"/>
+                                <include reference="eYt-bB-bJ5"/>
+                                <include reference="mrb-l0-2N6"/>
+                            </mask>
+                        </variation>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="53" y="375"/>
+            <point key="canvasLocation" x="52.173913043478265" y="375"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="Cyphers LogoBLUE copy" width="84" height="84"/>
+        <image name="Screenshot 2019-11-27 at 10.18.50 PM" width="309" height="323"/>
+    </resources>
 </document>
