--- a/Live News/Base.lproj/Main.storyboard
+++ b/Live News/Base.lproj/Main.storyboard
@@ -1,71 +1,33 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="qkL-dS-GK6">
-    <device id="retina6_1" orientation="portrait" appearance="light"/>
+    <device id="retina5_9" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15510"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Table View Controller-->
-        <scene sceneID="lv5-pi-dao">
-            <objects>
-                <tableViewController id="sai-CW-yJp" sceneMemberID="viewController">
-                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="ywA-FV-8AM">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
-                        <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="Cell" textLabel="umu-Rq-NAD" style="IBUITableViewCellStyleDefault" id="BBU-NW-t5a">
-                                <rect key="frame" x="0.0" y="28" width="414" height="43.5"/>
-                                <autoresizingMask key="autoresizingMask"/>
-                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="BBU-NW-t5a" id="7rN-3f-zKI">
-                                    <rect key="frame" x="0.0" y="0.0" width="414" height="43.5"/>
-                                    <autoresizingMask key="autoresizingMask"/>
-                                    <subviews>
-                                        <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="umu-Rq-NAD">
-                                            <rect key="frame" x="20" y="0.0" width="374" height="43.5"/>
-                                            <autoresizingMask key="autoresizingMask"/>
-                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                            <nil key="textColor"/>
-                                            <nil key="highlightedColor"/>
-                                        </label>
-                                    </subviews>
-                                </tableViewCellContentView>
-                            </tableViewCell>
-                        </prototypes>
-                        <connections>
-                            <outlet property="dataSource" destination="sai-CW-yJp" id="QLG-HP-3HN"/>
-                            <outlet property="delegate" destination="sai-CW-yJp" id="Dc0-kf-EMb"/>
-                        </connections>
-                    </tableView>
-                </tableViewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="ejY-6r-ABV" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="19" y="86"/>
-        </scene>
         <!--Main View-->
         <scene sceneID="Hxk-ht-Akz">
             <objects>
                 <viewController id="qkL-dS-GK6" customClass="Main_View" customModule="Live_News" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="GKp-cD-6Vt">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="nIs-cn-MIR">
-                                <rect key="frame" x="0.0" y="125" width="415" height="771"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="nIs-cn-MIR">
+                                <rect key="frame" x="16" y="126" width="343" height="686"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="Cell" textLabel="MXZ-nm-aaP" style="IBUITableViewCellStyleDefault" id="Uqy-cA-0gT">
-                                        <rect key="frame" x="0.0" y="28" width="415" height="47"/>
+                                        <rect key="frame" x="0.0" y="28" width="343" height="46.666667938232422"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Uqy-cA-0gT" id="0uo-9G-ej5">
-                                            <rect key="frame" x="0.0" y="0.0" width="415" height="47"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="343" height="46.666667938232422"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Title" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="MXZ-nm-aaP">
-                                                    <rect key="frame" x="20" y="0.0" width="375" height="47"/>
+                                                    <rect key="frame" x="15" y="0.0" width="313" height="46.666667938232422"/>
                                                     <autoresizingMask key="autoresizingMask"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="19"/>
                                                     <color key="textColor" red="0.58188301320000002" green="0.21569153669999999" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -81,23 +43,65 @@
                                     <outlet property="delegate" destination="qkL-dS-GK6" id="wlW-m6-4Yt"/>
                                 </connections>
                             </tableView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Instant News " textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="none" highlighted="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="L8J-nL-TeO">
-                                <rect key="frame" x="97" y="44" width="220" height="41"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" style="UICTFontTextStyleTitle0"/>
-                                <color key="textColor" systemColor="systemPinkColor" red="1" green="0.1764705882" blue="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Get the letest news at every second" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qeB-qU-bRI">
-                                <rect key="frame" x="12" y="93" width="374" height="18"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Get the letest news at every second" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qeB-qU-bRI">
+                                <rect key="frame" x="12" y="93" width="335" height="18"/>
                                 <fontDescription key="fontDescription" name="HiraMinProN-W6" family="Hiragino Mincho ProN" pointSize="18"/>
                                 <color key="textColor" systemColor="systemIndigoColor" red="0.34509803919999998" green="0.33725490200000002" blue="0.83921568629999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Instant News " textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="none" highlighted="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="L8J-nL-TeO">
+                                <rect key="frame" x="16" y="44" width="331" height="41"/>
+                                <fontDescription key="fontDescription" style="UICTFontTextStyleTitle0"/>
+                                <color key="textColor" systemColor="systemPinkColor" red="1" green="0.1764705882" blue="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="L8J-nL-TeO" firstAttribute="top" secondItem="26w-OL-arz" secondAttribute="top" id="2tj-94-t1C"/>
+                            <constraint firstItem="26w-OL-arz" firstAttribute="trailing" secondItem="qeB-qU-bRI" secondAttribute="trailing" constant="28" id="4ax-pX-YtN"/>
+                            <constraint firstItem="qeB-qU-bRI" firstAttribute="top" secondItem="L8J-nL-TeO" secondAttribute="bottom" constant="8" id="5lc-ni-XPn"/>
+                            <constraint firstItem="nIs-cn-MIR" firstAttribute="leading" secondItem="GKp-cD-6Vt" secondAttribute="leadingMargin" id="Bjd-cl-av6"/>
+                            <constraint firstItem="L8J-nL-TeO" firstAttribute="leading" secondItem="26w-OL-arz" secondAttribute="leading" constant="97" id="Hu2-Xh-4vA">
+                                <variation key="heightClass=regular-widthClass=compact" constant="16"/>
+                            </constraint>
+                            <constraint firstItem="qeB-qU-bRI" firstAttribute="leading" secondItem="26w-OL-arz" secondAttribute="leading" constant="12" id="MLJ-Kt-N0r"/>
+                            <constraint firstItem="nIs-cn-MIR" firstAttribute="top" secondItem="qeB-qU-bRI" secondAttribute="bottom" constant="15" id="ZwN-UE-X8i"/>
+                            <constraint firstAttribute="bottomMargin" secondItem="nIs-cn-MIR" secondAttribute="bottom" constant="-34" id="g22-Dg-jvZ"/>
+                            <constraint firstItem="nIs-cn-MIR" firstAttribute="trailing" secondItem="GKp-cD-6Vt" secondAttribute="trailingMargin" id="qvZ-Gm-Dsi"/>
+                            <constraint firstItem="L8J-nL-TeO" firstAttribute="centerX" secondItem="nIs-cn-MIR" secondAttribute="centerX" id="vZC-CT-Zcf">
+                                <variation key="heightClass=regular-widthClass=compact" constant="-6"/>
+                            </constraint>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="26w-OL-arz"/>
+                        <variation key="default">
+                            <mask key="constraints">
+                                <exclude reference="4ax-pX-YtN"/>
+                                <exclude reference="5lc-ni-XPn"/>
+                                <exclude reference="MLJ-Kt-N0r"/>
+                                <exclude reference="2tj-94-t1C"/>
+                                <exclude reference="Hu2-Xh-4vA"/>
+                                <exclude reference="vZC-CT-Zcf"/>
+                                <exclude reference="Bjd-cl-av6"/>
+                                <exclude reference="ZwN-UE-X8i"/>
+                                <exclude reference="g22-Dg-jvZ"/>
+                                <exclude reference="qvZ-Gm-Dsi"/>
+                            </mask>
+                        </variation>
+                        <variation key="heightClass=regular-widthClass=compact">
+                            <mask key="constraints">
+                                <include reference="4ax-pX-YtN"/>
+                                <include reference="5lc-ni-XPn"/>
+                                <include reference="MLJ-Kt-N0r"/>
+                                <include reference="2tj-94-t1C"/>
+                                <include reference="Hu2-Xh-4vA"/>
+                                <include reference="vZC-CT-Zcf"/>
+                                <include reference="Bjd-cl-av6"/>
+                                <include reference="ZwN-UE-X8i"/>
+                                <include reference="g22-Dg-jvZ"/>
+                                <include reference="qvZ-Gm-Dsi"/>
+                            </mask>
+                        </variation>
                     </view>
                     <connections>
                         <outlet property="TableView" destination="nIs-cn-MIR" id="vrG-QD-GpZ"/>
@@ -105,7 +109,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="wbf-eq-Eef" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="747.82608695652175" y="85.714285714285708"/>
+            <point key="canvasLocation" x="746.39999999999998" y="85.714285714285722"/>
         </scene>
     </scenes>
 </document>
